<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="294dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/firstText"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:text="@string/love_android"
            android:textSize="30dp" />



        <Switch

            android:layout_width="192dp"
            android:layout_height="86dp"
            android:text="@string/Switch_on_off" />

        <Button
            android:id="@+id/button3"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:text="@string/press" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flag" />

        <CheckBox
            android:id="@+id/check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check" />


    </LinearLayout>
</LinearLayout>


