<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:rowCount="6"
    android:columnCount="2"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <TextView
            android:id="@+id/firstText"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:text="@string/love_android"
            android:textSize="30sp" />

        <Switch

            android:layout_width="205dp"
            android:layout_height="65dp"
            android:text="@string/Switch_on_off"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/emptyTextView1"
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/press" />


        <EditText
            android:id="@+id/editText"
            android:layout_width="210dp"
            android:layout_height="60dp"
            android:textSize="20sp"
            android:text="@string/love_android" />

        <ImageButton
            android:id="@+id/button1"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_rowSpan="3"
            android:layout_gravity="fill"
            android:src="@drawable/flag" />

        <CheckBox
            android:id="@+id/check"
            android:layout_width="210dp"
            android:layout_height="70dp"
            android:layout_gravity="end"
            android:text="@string/check"
            android:textSize="18sp" />



</GridLayout>


